--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,6 +3,7 @@
 body {
     background-color: #006494;
     font-family: 'Bitter', serif;
+    font-size: 1rem;
 }
 
 ul {
@@ -69,6 +70,7 @@ img.banner {
     height: auto;
     max-width: 150px;
     max-height: 150px;
+    margin-top: 20px;
 }
 
 .image-holder {
@@ -80,6 +82,81 @@ img.banner {
     max-width: 150px;
     max-height: 150px;
     margin: 0 auto;
+}
+
+.google-card .image-holder {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    max-width: 350px;
+    max-height: 350px;
+    margin: 10px auto 0 auto;
+}
+
+.google-card .card-img-top {
+    width: auto;
+    height: auto;
+    max-width: none;
+    max-height: none;
+}
+
+/* TABS */
+
+ul#tabs {
+    box-sizing: border-box;
+    list-style-type: none;
+    padding: 0 0 0 0;
+    margin: 0 auto 0 auto;
+    text-align: center;
+    display: none;
+    width: 100%;
+    table-layout: fixed;
+}
+
+ul#tabs li {
+    display: inline;
+    vertical-align: middle;
+    text-align: center;
+    margin: 0 5%;
+    cursor: pointer;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-touch-callout: none;
+}
+
+ul#tabs li h3 {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    color: white;
+}
+
+ul#tabs li:hover h3 {
+   color: black; 
+}
+    
+ul#tabs li.active h3 {
+    color: black;
+    cursor: auto;
+}
+
+ul#tab {
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 1200px;
+    list-style-type: none;
+    margin: 0 auto;
+    padding: 0;
+}
+
+ul#tab li {
+    display: flex;
+    padding: 10px 0 0 0;
+}
+
+ul#tab li.active {
+    display: block;
 }
 
 /* RESULTS AREA */
@@ -109,6 +186,7 @@ img.banner {
 .google-card {
     margin-top: 10px;
     margin-bottom: 10px;
+    min-width: 90%;
 }
 
 /* EBAY RESULTS */
@@ -119,6 +197,7 @@ img.banner {
     flex-wrap: wrap;
     justify-content: center;
     max-width: 1500px;
+    margin-left: 5px;
 }
 
 .ebay-card {
@@ -155,11 +234,22 @@ img.banner {
     text-align: center;
 }
 
-
-
-
-
 .remove {
     display: block;
     margin: 5px auto;
 }
+
+/* Tablet portrait */
+
+@media screen and (max-width: 798px) {
+    .ebay-card {
+        max-width: none;
+        margin: 10px auto;
+    }
+    .table-display {
+        display: table;
+    }
+
+    ul#tab li {
+    display: none;
+    }
