--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -170,64 +170,6 @@ main {
 }
 
 
-/* TABS */
-
-ul#tabs {
-    box-sizing: border-box;
-    list-style-type: none;
-    padding: 0 0 0 0;
-    margin: 0 auto 0 auto;
-    text-align: center;
-    display: none;
-    width: 100%;
-    table-layout: fixed;
-}
-
-ul#tabs li {
-    display: inline;
-    vertical-align: middle;
-    text-align: center;
-    margin: 0 5%;
-    cursor: pointer;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    -webkit-touch-callout: none;
-}
-
-ul#tabs li h3 {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    color: white;
-}
-
-ul#tabs li:hover h3 {
-    color: black;
-}
-
-ul#tabs li.active h3 {
-    color: black;
-    cursor: auto;
-}
-
-ul#tab {
-    box-sizing: border-box;
-    width: 100%;
-    max-width: 1200px;
-    list-style-type: none;
-    margin: 0 auto;
-    padding: 0;
-}
-
-ul#tab li {
-    display: flex;
-    padding: 10px 0 0 0;
-}
-
-ul#tab li.active {
-    display: block;
-}
-
-
 /* RESULTS AREA */
 
 .results-area {
@@ -302,17 +244,26 @@ ul#tab li.active {
     padding-bottom: 20px;
 }
 
-#sortable div span { 
+.ui-icon-arrowthick-2-e-w { 
     position: absolute; 
     left: 10px;
     top: 10px; 
     cursor: pointer;
+    display: inline;
+}
+
+.ui-icon-arrowthick-2-n-s {
+    position: absolute; 
+    left: 10px;
+    top: 10px; 
+    cursor: pointer;
+    display: none;
 }
 
 .search-card {
     width: 15rem;
     margin: 10px;
-    height: auto;
+    height: 12rem;
     align-items: center;
 }
 
@@ -393,9 +344,6 @@ footer p {
         font-size: .7rem
         letter-spacing: 2.5pt;
     }
-    #signIn, #signOut {
-
-    }
     .ebay-card {
         max-width: none;
         margin: 10px auto;
@@ -408,9 +356,6 @@ footer p {
     }
     .table-display {
         display: table;
-    }
-    ul#tab li {
-        display: none;
     }
 }
 
@@ -425,6 +370,15 @@ footer p {
     .navbar {
         padding: .5rem 1rem!important;
     }
+}
+
+@media screen and (max-width: 566px) {
+    .ui-icon-arrowthick-2-e-w { 
+        display: none;
+}
+    .ui-icon-arrowthick-2-n-s {
+        display: inline;   
+}
 }
 
 @media screen and (max-width: 510px) {
