--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -22,7 +22,6 @@ body {
     padding: 0!important;
 }
 
-
 .navbar-toggler {
     border-radius: 25px!important;
     border: 2px solid #474E5D!important;
@@ -72,6 +71,26 @@ body {
 img.banner {
     max-width: 400px;
     width: 100%;
+}
+
+.tagline {
+    padding-bottom: 10px;
+    display: table;
+}
+
+#about-click {
+    display: table;
+    margin: 10px auto;
+    font-size: 2vw;
+}
+
+#about-click:hover {
+    cursor: pointer;
+}
+
+#about {
+    display: none;
+    font-size: 2vw;
 }
 
 
@@ -263,12 +282,17 @@ main {
 .search-card {
     width: 15rem;
     margin: 10px;
-    height: 12rem;
+    height: 100%;
+    min-height: 15rem;
     align-items: center;
 }
 
 .search-card-body {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .remove {
